# oceanprotocol-job-details

./: .bumpversion.toml  .coverage  .gitignore  .pre-commit-config.yaml  BUILD.md  Dockerfile  LICENSE  README.md  coverage.xml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: package-testing.yml  python-publish.yml
_data/inputs/: algoCustomData.json
_data/inputs/8f67E08be5dD941a701c2491E814535522c33bC2/: 0
oceanprotocol_job_details/: __init__.py  config.py  di.py  domain.py  exceptions.py  executors.py  helpers.py  job_details.py  ocean.py  paths.py  plugins.py  settings.py  utils.py
oceanprotocol_job_details/dataclasses/: constants.py  job_details.py
oceanprotocol_job_details/domain/: __init__.py  ddo.py  derived.py
oceanprotocol_job_details/loaders/: __init__.py  input_loader.py  loader.py
oceanprotocol_job_details/loaders/impl/: __init__.py  ddo.py  environment.py  files.py  job_details.py  map.py  utils.py
src/oceanprotocol_job_details/: __init__.py  constants.py  job_details.py
src/oceanprotocol_job_details/dataclasses/: constants.py  job_details.py
src/oceanprotocol_job_details/loaders/impl/: environment.py
tests/: conftest.py  data.py  test_derived.py  test_environment.py  test_executor.py  test_files.py  test_job_details.py  test_job_settings.py  test_ocean.py
tests/data/ddos/: 6EDaE15f7314dC306BB6C382517D374356E6B9De  8f67E08be5dD941a701c2491E814535522c33bC2
