[project]
name = "oceanprotocol_job_details"
version = "0.0.1"
authors = [
    { name = "Christian López García", email = "christian.lopez@udl.cat" },
]
description = "A Python package to get details from OceanGate jobs"
readme = "README.md"
requires-python = ""
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]


[project.urls]
Homepage = "https://github.com/AgrospAI/oceangate-job-details"
Issues = "https://github.com/AgrospAI/oceangate-job-details/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_backend"
