[project]
license = { file = "LICENSE" }

name = "oceanprotocol-job-details"
version = "0.0.1"
authors = [
    { name = "Christian López García", email = "christian.lopez@udl.cat" },
]
description = "A Python package to get details from OceanGate jobs"
readme = "README.md"
requires-python = ""
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
[project.urls]
Homepage = "https://github.com/AgrospAI/oceangate-job-details"
Issues = "https://github.com/AgrospAI/oceangate-job-details/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
