[project]
name = "oceanprotocol-job-details"
version = "0.3.19"
description = "A Python package to get details from OceanProtocol jobs"
authors = [
    { name = "Agrospai", email = "agrospai@udl.cat" },
    { name = "Christian López García", email = "christian.lopez@udl.cat" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "aiofiles>=25.1.0",
    "dependency-injector>=4.48.2",
    "orjson>=3.11.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/AgrospAI/oceanprotocol-job-details"
Issues = "https://github.com/AgrospAI/oceanprotocol-job-details/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_level = "INFO"
pythonpath = "oceanprotocol_job_details"
log_cli = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["oceanprotocol_job_details"]

[tool.hatch.build.targets.wheel]
packages = ["oceanprotocol_job_details"]

[tool.hatch.build.targets.wheel.package-data]
oceanprotocol_job_details = ["py.typed"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
disallow_any_explicit = true

[dependency-groups]
dev = [
    "coverage-badge>=1.1.2",
    "mypy>=1.15.0",
    "pre-commit>=4.5.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "types-aiofiles>=25.1.0.20251011",
]

[tool.coverage.run]
omit = ["oceanprotocol_job_details/loaders/loader.py"]
